--- a/KNN_sklearn.ipynb
+++ b/KNN_sklearn.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN sklearn",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMOsuN2qGUOCDvg/kLlbXCh",
+      "authorship_tag": "ABX9TyMp2TV1gxGH+5mspaEdUtmk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
       "source": [
         "#https://www.python-course.eu/k_nearest_neighbor_sklearn.php"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -64,7 +64,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QEmNBwTysIVh",
-        "outputId": "8d118326-231a-4d8a-d536-d46904b808f8"
+        "outputId": "c93f1a18-5394-428f-860d-8e67f3fae607"
       },
       "source": [
         "%matplotlib inline\n",
@@ -81,7 +81,7 @@
         "\n",
         "print(\"Bibliotheken importiert....\")"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,21 +108,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2GQ0gQFg85fJ",
-        "outputId": "710a05fb-663f-4370-9f7d-878d667b9775"
+        "outputId": "f5ced476-a78b-41b5-c7e3-b544b4f71c24"
       },
       "source": [
         "# https://scikit-learn.org/stable/modules/preprocessing.html\n",
         "# sklearn teilt die Werte enfach durch max, wie es hier scheint (zumindest bei den verwendeten Paramter \"max\")\n",
         "\n",
-        "def normalizeDataSklearn(values):\n",
-        "  normalized_array = preprocessing.normalize(values, axis=0,norm=\"max\")\n",
+        "# https://scikit-learn.org/stable/auto_examples/preprocessing/plot_all_scaling.html#sphx-glr-auto-examples-preprocessing-plot-all-scaling-py\n",
+        "# https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html#sklearn.preprocessing.MinMaxScaler\n",
         "\n",
-        "  # print(normalized_array)\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "\n",
+        "scaler=0\n",
+        "\n",
+        "def normalizeDataSklearn(values):\n",
+        "  # normalized_array = preprocessing.normalize(values, axis=0,norm=\"max\")\n",
+        "  \n",
+        "  global scaler\n",
+        "  scaler = MinMaxScaler()\n",
+        "  scaler.fit(values)\n",
+        "  \n",
+        "  normalized_array = scaler.transform(values)\n",
+        "\n",
+        "  #print(normalized_array)\n",
         "  return normalized_array\n",
         "\n",
         "print(\"Funktion normalizeDataSklearn wurde erstellt....\")"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +152,7 @@
         "id": "RYs95RTDCXYk"
       },
       "source": [
-        "Als nächstes teile ich das dataset in Test- und Trainingsdaten. Dies habe ich in der vorhergehenden Übung (Regression) noch nicht gemacht. Es scheint mir aber mittlerweile auch bei den Übungen sinnvoll, da nebenbei auch das dataset durchgemischt wird.\n",
+        "Als nächstes teile ich das dataset in Test- und Trainingsdaten. Dies habe ich in der vorhergehenden Übung (Regression) noch nicht gemacht. Es scheint mir aber mittlerweile auch bei den Übungen sinnvoll, da nebenbei auch das dataset durchgemischt wird. (Auch wenn es bei KNN nicht notwendig scheint, da gegen alle vorhandenen Elemente gerechnet wird)\n",
         "\n",
         "Ich erstelle hierbei zwei Versionen. Eine ohne vorhergehende Normalisierung, eine mit. Bei KNN ist die Normalisierung vor allem bei großen Differenzen innerhalb der Zahlenbereich notwendig, um ein shadowing vorzubeugen.\n",
         "\n",
@@ -153,7 +166,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tmgaOBNmsJYl",
-        "outputId": "b60e54f7-bef2-46d8-f83f-6ba291a3669c"
+        "outputId": "b9cb627d-63d9-4dc8-ac6c-9210742c61e5"
       },
       "source": [
         "# https://scikit-learn.org/stable/auto_examples/datasets/plot_iris_dataset.html\n",
@@ -187,7 +200,7 @@
         "\n",
         "print(\"Daten vorhanden und vorbereitet\")"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +227,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HWZ1SB0i0VOt",
-        "outputId": "d15ee364-5212-4236-89fc-2dc673a3f89a"
+        "outputId": "24357603-1ff7-4097-e89f-7db84e78d510"
       },
       "source": [
         "knnClassifier = KNeighborsClassifier(algorithm=\"auto\",\n",
@@ -229,7 +242,7 @@
         "\n",
         "print(\"Klassifizierer ist vorbereitet and antrainiert\")"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +269,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xdMLqcAf3pir",
-        "outputId": "e42201ab-5a61-4de0-d64d-b5c575e4950b"
+        "outputId": "67872576-4f88-4f72-fca1-dd0acf153673"
       },
       "source": [
         "# https://scikit-learn.org/stable/modules/model_evaluation.html\n",
@@ -267,9 +280,9 @@
         "predLabelsTrain = knnClassifier.predict(trainData)\n",
         "predLabelsAll = knnClassifier.predict(data)\n",
         "\n",
-        "predLabelsTestNorm = knnClassifier.predict(testData)\n",
-        "predLabelsTrainNorm = knnClassifier.predict(trainData)\n",
-        "predLabelsAllNorm = knnClassifier.predict(data)\n",
+        "predLabelsTestNorm = knnClassifierNorm.predict(scaler.transform(testData))\n",
+        "predLabelsTrainNorm = knnClassifierNorm.predict(scaler.transform(trainData))\n",
+        "predLabelsAllNorm = knnClassifierNorm.predict(scaler.transform(data))\n",
         "\n",
         "#print(\"Vorhersage:\")\n",
         "#print(predLabelsTest)\n",
@@ -294,7 +307,7 @@
         "print()\n",
         "print(\"Fertig...\")"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,8 +318,8 @@
             "Accuracy alle Daten:  0.9866666666666667\n",
             "\n",
             "Accuracy (mit Normierung) Testdaten:  1.0\n",
-            "Accuracy (mit Normierung) Trainingsdaten:  0.9833333333333333\n",
-            "Accuracy (mit Normierung) alle Daten:  0.9866666666666667\n",
+            "Accuracy (mit Normierung) Trainingsdaten:  0.9666666666666667\n",
+            "Accuracy (mit Normierung) alle Daten:  0.9733333333333334\n",
             "\n",
             "Fertig...\n"
           ],
@@ -320,15 +333,16 @@
         "id": "snx0UWW9-GRx"
       },
       "source": [
-        "Sowohl mit, als auch ohne Normierung erhalte ich die gleiche accuracy:\n",
+        "Die Ergebniss mit und ohne Normierung unterscheiden sich ein wenig, wobei die ohne etwas besser sind:\n",
         "\n",
         "* Accuracy Testdaten:  1.0\n",
         "* Accuracy Trainingsdaten:  0.9833333333333333\n",
         "* Accuracy alle Daten:  0.9866666666666667\n",
         "---\n",
+        "\n",
         "* Accuracy (mit Normierung) Testdaten:  1.0\n",
-        "* Accuracy (mit Normierung) Trainingsdaten:  0.9833333333333333\n",
-        "* Accuracy (mit Normierung) alle Daten:  0.9866666666666667\n",
+        "* Accuracy (mit Normierung) Trainingsdaten:  0.9666666666666667\n",
+        "* Accuracy (mit Normierung) alle Daten:  0.9733333333333334\n",
         "\n",
         "Dies bestätigt meine oben gemachte Vermutung."
       ]
@@ -356,7 +370,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6HEmVMhn5AE4",
-        "outputId": "ccf88e0b-8a4c-4b3b-bc37-dd37e752fbb1"
+        "outputId": "b2afd330-5b4b-4167-bb90-cfdcf0c6dae7"
       },
       "source": [
         "values=np.array([4.8,2.5,5.3,2.4])\n",
@@ -369,7 +383,7 @@
         "print(pred)\n",
         "print(predNorm)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
