--- a/KNN_Algorithmus.ipynb
+++ b/KNN_Algorithmus.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN Algorithmus",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOs+okGTFZaGQYR0URVTiOo",
+      "authorship_tag": "ABX9TyNfUMp4hpOXAcXKvQ0JJGhF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,24 @@
         "id": "4dfVQYbzKTEs"
       },
       "source": [
-        "https://cloud.google.com/architecture/data-preprocessing-for-ml-with-tf-transform-pt1?hl=de"
+        "**Die eigentliche Lösung der Aufgabe ist ganz am Ende zu finden...**\n",
+        "\n",
+        "Ein interssanter Link zum Thema Datenvorbereitung:\n",
+        "\n",
+        "\n",
+        "https://cloud.google.com/architecture/data-preprocessing-for-ml-with-tf-transform-pt1?hl=de\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Der erste Teil der anstehenden Aufgabe zum Thema instanzabsiertes Lernen ist die Programmierung eines eigenen Logarithmus hierzu. Teile des folgenden Codes beinhalten Alternativen mit Sklearn oder Tests, um Vergleiche mit meiner eigenen Lösung anzustellen. \n",
+        "\n",
+        "Diese wurden in der Abgabe belassen, da diese auch für mich selbst als NAchschlagewerk dient.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "In einem ersten Schritt erfolgen alle notwendigen Importe für die spätere Nutzung:"
       ]
     },
     {
@@ -63,7 +80,7 @@
         "\n",
         "print(\"Import wurde ausgeführt....\")"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,6 +89,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Iivi56fvX_kz"
+      },
+      "source": [
+        "Um über eigene Adressen zu verfügen, wird anschließend eine kleine Adressbasis definiert."
       ]
     },
     {
@@ -92,7 +118,7 @@
         "\n",
         "print(\"Testdaten erzeugt...\")"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,6 +127,29 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AhDa2TC0Yhar"
+      },
+      "source": [
+        "Als Basis dieser Übung dient der auch schon in der Übung zur Regression eingesetzte eigene CSV Datensatz. Im fiktiven Kontext der Nutzung wurde beschlossen, aus den Zahlen der Zuteilungen und erfolgreihen Bearbeitung (siehe hierzu die Ausführungen im Rahmen der Aufgabe zur Regression) einen Quotionen zu berechnen und darauf basierend die Mitarbeiter zu klassifizieren. \n",
+        "\n",
+        "Es wurden vier Klassen auf Basis der vorliegenden \"Basisdaten\" definiert:\n",
+        "* 0 unbestimmt      unbestimmt\n",
+        "* 1 Top             =1\n",
+        "* 2 Best            >1\n",
+        "* 3 Score           >=1.2\n",
+        "* 4 Underscore      >=2\n",
+        "\n",
+        "(Hierbei ist es natürlich diskussionswürdig, ob diese Art zum einen das Verhältnis belastet, zum anderen in dieser Einfachheit sinnvoll ist. Stichwort feature enginiering)\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "In der folgenden Zelle werden die erweiterten Daten aus GitHub geholt und aufgeteilt. Sie werden nicht gesplittet und ndurcheinander gemischt, da dieser Algorithmus grundsätzlcih alle Daten nutzt und determinstisch/nachvollziehbar ist."
       ]
     },
     {
@@ -140,7 +189,7 @@
         "#data\n",
         "#label"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,6 +198,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eQ8wnsqXa0D9"
+      },
+      "source": [
+        "Ein wichtiger Punkt bei instanzbasierten Verfahren ist die Normalisierung. Als Vergleich habe ich hier eine Lösung mit Sklearn umgesetzt, welche ich jedoch nur zum Testen gebraucht haben."
       ]
     },
     {
@@ -170,7 +228,7 @@
         "\n",
         "print(\"Funktion normalizeDataSklearn wurde erstellt...\")\n"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,6 +237,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RWNzGb7Ja3Mn"
+      },
+      "source": [
+        "Im folgenden ist meine eigene Methode, welche ich auch hier verwenden habe. Ich nutze heirbei globale Variablen, da ich nicht nur die Daten, sondern auch eine neue Instanz Normalisieren muss. Hierfür dient die Funktion normalizeSingleData, welch enur einen Wert normalisert im Gegensatz zu normalizeData."
       ]
     },
     {
@@ -220,7 +287,7 @@
         "\n",
         "print(\"Funktion normalizeData wurde erstellt...\")"
       ],
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,6 +304,8 @@
         "id": "GSfFD-50G-Bq"
       },
       "source": [
+        "Ab hier fange ich an, die Logig für die Entfernungsberechnung zu bauen. Auch hier setze ich zunächst eine (interessante) Lösung von Sklearn an.\n",
+        "\n",
         "Wenn np.linalg.norm() auf einer array-ähnlichen Eingabe ohne zusätzliche Argumente aufgerufen wird, ist das Standardverhalten, die L2-Norm auf einer abgeflachten Ansicht des Arrays zu berechnen. Dies ist die Quadratwurzel aus der Summe der quadrierten Elemente und kann als die Länge des Vektors im euklidischen Raum interpretiert werden."
       ]
     },
@@ -265,7 +334,7 @@
         "print(calculateDistanceSklearn([1, 3], [2, 6]))\n",
         "print(\"Funktion calculateDistanceSklearn wurde erstellt...\")"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,6 +344,17 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RwQU30PdccIY"
+      },
+      "source": [
+        "Um solch eine Funktion auch mal selbst umzusetzen, habe ich die Funktionalität für zwei dimensionale Daten mal selbst programmiert und verwende ihn auch für meine Lösung.\n",
+        "\n",
+        "Beide algorithmen liefern heirbei anhand von Testdaten gleiche Ergebnisse."
       ]
     },
     {
@@ -302,7 +382,7 @@
         "print(x)\n",
         "print(\"Funktion calculateDistance wurde erstellt...\")"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,6 +392,19 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7SzJSc13c4h7"
+      },
+      "source": [
+        "Die folgende Zelle dient dafür, meinen Datenbestand zu normalisieren (anhand der weiter oben definierten Funktion).\n",
+        "\n",
+        "Ab hier habe ich zwei Sätze mit normalisierten Daten: \n",
+        "\n",
+        "Einmal anhand meiner eigenen Funktion und einmal mit Hilfe von Sklearn. Auch hier will ich die Daten später zum Testen nutzen. Zudem ist der mit meinen Code normalisierte Satz um den label/Klasse erweitert. Dies macht den späteren Zugriff einfacher."
       ]
     },
     {
@@ -340,7 +433,7 @@
         "\n",
         "print(\"Daten wurden normalisiert...\")"
       ],
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,6 +442,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lTFnA9fLdbBy"
+      },
+      "source": [
+        "Hier kommt der Kern des Algorithmuses. Ihm wird eine zwei dimensionale Instanz übergeben und zudem ein k. Er prüft die neue Instanz an alle vorhandene Werte und liefert eine sortierte Liste der Entfernungen und Klassen der Länge k zurück."
       ]
     },
     {
@@ -375,7 +477,7 @@
         "\n",
         "print(\"Funktion get_k_nearest wurde erstellt...\")"
       ],
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,7 +494,13 @@
         "id": "FR7pKblEBqkm"
       },
       "source": [
-        "Usually, a Python dictionary throws a KeyError if you try to get an item with a key that is not currently in the dictionary. The defaultdict in contrast will simply create any items that you try to access (provided of course they do not exist yet). "
+        "Die folgende Methode zählt mir die Anzahl der labels in meinen k-stelligen Ergebnis aus. Die umsetzung ist etwas tricky, dafür habe ich die Bibliothek/das Object defaultdict entdeckt und verwendet.\n",
+        "\n",
+        "https://stackoverflow.com/questions/5900578/how-does-collections-defaultdict-work\n",
+        "\n",
+        " \"Usually, a Python dictionary throws a KeyError if you try to get an item with a key that is not currently in the dictionary. The defaultdict in contrast will simply create any items that you try to access (provided of course they do not exist yet).\" \n",
+        "\n",
+        "Mit Hilfe dieser Methode erhalte ich dynamische eine Auszählung der Instanzen zu den einzelnen Labeln. Diese muss nur sortiert werden und liefert dann das Label mit den meißten Einträgen/Nachbarn zurück."
       ]
     },
     {
@@ -433,7 +541,7 @@
         "\n",
         "print(\"Funktion get_label_count wurde erstellt...\")\n"
       ],
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,6 +550,21 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aetfmF2kfR9n"
+      },
+      "source": [
+        "## Lösung der Aufgabe\n",
+        "\n",
+        "Der folgende Code kann als Lösung der Aufgabe betrachtet werden. Er übergibt eine zuvor normailisierte Instanz an get_k_nearest. Das Ergebnis wird mit get_label_count ausgewerten und aufgeräumt ausgegeben.\n",
+        "\n",
+        "Die Zuordnung dreier bekannter Instanzen war erfolgreich. Das Auftauchen gleicher Werte im Array ist mit dem vorhandensein gleicher Basisdaten zu erklären.\n",
+        "\n",
+        "Natürlich währe die Lösung in einer IDE übersichtlicher und zudem das Problem mit wesendlich weniger Code lösbar. Aber ein Notebook ist ja auch ein Werkzeug, um sich Code und Daten flexible und dynamisch beschäftigen zu können."
       ]
     },
     {
@@ -476,7 +599,7 @@
         "\n",
         "print(\"Die wahrscheinlichste Klasse ist: \" + str(y[0]) + \" mit \" + str(y[1]) + \" Mitgliedern\")"
       ],
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
