--- a/KNN_Algorithmus.ipynb
+++ b/KNN_Algorithmus.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN Algorithmus",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNfUMp4hpOXAcXKvQ0JJGhF",
+      "authorship_tag": "ABX9TyP8Q1aophupaDkuquXjLlCN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         "\n",
         "Der erste Teil der anstehenden Aufgabe zum Thema instanzabsiertes Lernen ist die Programmierung eines eigenen Logarithmus hierzu. Teile des folgenden Codes beinhalten Alternativen mit Sklearn oder Tests, um Vergleiche mit meiner eigenen Lösung anzustellen. \n",
         "\n",
-        "Diese wurden in der Abgabe belassen, da diese auch für mich selbst als NAchschlagewerk dient.\n",
+        "Diese wurden in der Abgabe belassen, da diese auch für mich selbst als Nachschlagewerk dient.\n",
         "\n",
         "\n",
         "---\n",
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rr3Yb6Mhkpfp",
-        "outputId": "0a2ff040-2046-428c-e83c-8c9123c2efbc"
+        "outputId": "f66160e0-bc6d-4c53-c844-d05c503e4f59"
       },
       "source": [
         "# Initialize\n",
@@ -80,7 +80,7 @@
         "\n",
         "print(\"Import wurde ausgeführt....\")"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J7ryfohiiNur",
-        "outputId": "ed3fc0ab-b19b-41a0-d66a-14dc8f8488c8"
+        "outputId": "ce5f94dc-003a-457b-efbc-24b36cc6129b"
       },
       "source": [
         "#Testdaten\n",
@@ -118,7 +118,7 @@
         "\n",
         "print(\"Testdaten erzeugt...\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +135,9 @@
         "id": "AhDa2TC0Yhar"
       },
       "source": [
-        "Als Basis dieser Übung dient der auch schon in der Übung zur Regression eingesetzte eigene CSV Datensatz. Im fiktiven Kontext der Nutzung wurde beschlossen, aus den Zahlen der Zuteilungen und erfolgreihen Bearbeitung (siehe hierzu die Ausführungen im Rahmen der Aufgabe zur Regression) einen Quotionen zu berechnen und darauf basierend die Mitarbeiter zu klassifizieren. \n",
+        "Als Basis dieser Übung dient der auch schon in der Übung zur Regression eingesetzte eigene CSV Datensatz:\n",
+        "\n",
+        "Im fiktiven Kontext der Nutzung wurde beschlossen, aus den Zahlen der Zuteilungen und erfolgreihen Bearbeitung (siehe hierzu die Ausführungen im Rahmen der Aufgabe zur Regression) einen Quotionen zu berechnen und darauf basierend die Mitarbeiter zu klassifizieren. \n",
         "\n",
         "Es wurden vier Klassen auf Basis der vorliegenden \"Basisdaten\" definiert:\n",
         "* 0 unbestimmt      unbestimmt\n",
@@ -149,7 +151,7 @@
         "\n",
         "---\n",
         "\n",
-        "In der folgenden Zelle werden die erweiterten Daten aus GitHub geholt und aufgeteilt. Sie werden nicht gesplittet und ndurcheinander gemischt, da dieser Algorithmus grundsätzlcih alle Daten nutzt und determinstisch/nachvollziehbar ist."
+        "In der folgenden Zelle werden die erweiterten Daten aus GitHub geholt und aufgeteilt. Sie werden nicht gesplittet und durcheinander gemischt, da dieser Algorithmus grundsätzlich alle Daten nutzt und determinstisch/nachvollziehbar ist."
       ]
     },
     {
@@ -159,7 +161,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j2V7jt42DsPv",
-        "outputId": "4668d872-ff17-4423-ed88-56f0e938857f"
+        "outputId": "bfb6bd4f-c054-4b3a-cf19-401b07e637e5"
       },
       "source": [
         "# Daten von GitHub besorgen und Überschriften zur besseren Übersicht anpassen\n",
@@ -189,7 +191,7 @@
         "#data\n",
         "#label"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +218,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M2TXfggWsUK2",
-        "outputId": "73d836c0-f121-40d0-87bd-2a64764ac67f"
+        "outputId": "511ef482-fef3-4181-8393-9885bf8da80f"
       },
       "source": [
         "# Wert geteilt durch Max.\n",
@@ -228,7 +230,7 @@
         "\n",
         "print(\"Funktion normalizeDataSklearn wurde erstellt...\")\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +247,7 @@
         "id": "RWNzGb7Ja3Mn"
       },
       "source": [
-        "Im folgenden ist meine eigene Methode, welche ich auch hier verwenden habe. Ich nutze heirbei globale Variablen, da ich nicht nur die Daten, sondern auch eine neue Instanz Normalisieren muss. Hierfür dient die Funktion normalizeSingleData, welch enur einen Wert normalisert im Gegensatz zu normalizeData."
+        "Im Folgenden ist meine eigene Methode zu sehen, welche ich auch hier verwende. Ich nutze hierbei globale Variablen, da ich nicht nur die Daten, sondern später auch eine neue Instanz Normalisieren muss. Hierfür dient die Funktion normalizeSingleData, welche nur einen Wert normalisert im Gegensatz zu normalizeData."
       ]
     },
     {
@@ -255,7 +257,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KiMPATuEjChH",
-        "outputId": "0ddc0c45-d5f8-4a01-d10d-922634081d63"
+        "outputId": "5f2d38ea-1e7f-4b87-bf69-6b2c82127cec"
       },
       "source": [
         "# Normalisiert zwischen 0 und 1\n",
@@ -287,7 +289,7 @@
         "\n",
         "print(\"Funktion normalizeData wurde erstellt...\")"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +306,7 @@
         "id": "GSfFD-50G-Bq"
       },
       "source": [
-        "Ab hier fange ich an, die Logig für die Entfernungsberechnung zu bauen. Auch hier setze ich zunächst eine (interessante) Lösung von Sklearn an.\n",
+        "Ab hier fange ich an, die Logik für die Entfernungsberechnung zu bauen. Auch hier setze ich zunächst eine (interessante) Lösung von Sklearn an.\n",
         "\n",
         "Wenn np.linalg.norm() auf einer array-ähnlichen Eingabe ohne zusätzliche Argumente aufgerufen wird, ist das Standardverhalten, die L2-Norm auf einer abgeflachten Ansicht des Arrays zu berechnen. Dies ist die Quadratwurzel aus der Summe der quadrierten Elemente und kann als die Länge des Vektors im euklidischen Raum interpretiert werden."
       ]
@@ -316,7 +318,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x_EMIZZxCmRq",
-        "outputId": "836872bf-5e76-42a1-f3af-0730d057e020"
+        "outputId": "4c6741e2-20d7-4f25-d684-de171a474579"
       },
       "source": [
         "#https://www.delftstack.com/de/api/numpy/python-numpy-numpy.linalg.norm-function/\n",
@@ -334,7 +336,7 @@
         "print(calculateDistanceSklearn([1, 3], [2, 6]))\n",
         "print(\"Funktion calculateDistanceSklearn wurde erstellt...\")"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,9 +354,9 @@
         "id": "RwQU30PdccIY"
       },
       "source": [
-        "Um solch eine Funktion auch mal selbst umzusetzen, habe ich die Funktionalität für zwei dimensionale Daten mal selbst programmiert und verwende ihn auch für meine Lösung.\n",
+        "Um solch eine Funktion auch mal selbst umzusetzen, habe ich die Funktionalität hier für zwei dimensionale Daten selbst programmiert und verwende diese Methode auch für meine Lösung an dieser Stelle.\n",
         "\n",
-        "Beide algorithmen liefern heirbei anhand von Testdaten gleiche Ergebnisse."
+        "Beide Algorithmen liefern hierbei anhand von Testdaten gleiche Ergebnisse."
       ]
     },
     {
@@ -364,7 +366,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qlQsCNGXFP5o",
-        "outputId": "349d79a3-7fcc-4715-ba7d-a31e304f77f8"
+        "outputId": "67b1d315-606a-4225-fdc0-46a7d606aa18"
       },
       "source": [
         "def calculateDistance2D(instance1, instance2):\n",
@@ -382,12 +384,14 @@
         "print(x)\n",
         "print(\"Funktion calculateDistance wurde erstellt...\")"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "3.1622776601683795\n",
+            "[ 1  4  6  2  4  5  2  5  1  2  8  4  2  4  4  1  4  2  2  5  1  8  4 14\n",
+            "  2  4  4  9  8 12 12  9  9  9  8  8  8  8  8 12 10  5  4  3 12  3  9 10\n",
+            " 14  4  4  3  6  3  9  8  2  8]\n",
             "Funktion calculateDistance wurde erstellt...\n"
           ],
           "name": "stdout"
@@ -414,7 +418,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kLTHmJE4kdwI",
-        "outputId": "3ef30aed-571e-42ff-ae30-09ad19c3b6aa"
+        "outputId": "ce4d2080-5a9f-439b-c505-d8b4f62a40d2"
       },
       "source": [
         "x=np.array(data[:,0]).reshape(-1, 1)\n",
@@ -433,7 +437,7 @@
         "\n",
         "print(\"Daten wurden normalisiert...\")"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,7 +464,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3eacb08d-0f19-4b04-8e0f-cb36210dcd53"
+        "outputId": "6f2fc841-b276-413f-b4e4-ac2e8538c0c1"
       },
       "source": [
         "def get_k_nearest(newInstance2D, k):\n",
@@ -477,7 +481,7 @@
         "\n",
         "print(\"Funktion get_k_nearest wurde erstellt...\")"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,13 +498,13 @@
         "id": "FR7pKblEBqkm"
       },
       "source": [
-        "Die folgende Methode zählt mir die Anzahl der labels in meinen k-stelligen Ergebnis aus. Die umsetzung ist etwas tricky, dafür habe ich die Bibliothek/das Object defaultdict entdeckt und verwendet.\n",
+        "Die folgende Methode zählt die Anzahl der Labels in meinen k-stelligen Ergebnis aus. Die Umsetzung ist etwas tricky, dafür habe ich die Bibliothek/das Object **defaultdict** entdeckt und verwendet.\n",
         "\n",
         "https://stackoverflow.com/questions/5900578/how-does-collections-defaultdict-work\n",
         "\n",
         " \"Usually, a Python dictionary throws a KeyError if you try to get an item with a key that is not currently in the dictionary. The defaultdict in contrast will simply create any items that you try to access (provided of course they do not exist yet).\" \n",
         "\n",
-        "Mit Hilfe dieser Methode erhalte ich dynamische eine Auszählung der Instanzen zu den einzelnen Labeln. Diese muss nur sortiert werden und liefert dann das Label mit den meißten Einträgen/Nachbarn zurück."
+        "Mit Hilfe dieser Methode erhalte ich dynamisch eine Auszählung der Instanzen zu den einzelnen Labels. Diese muss nur sortiert werden und liefert dann das Label mit den meißten Einträgen/Nachbarn zurück."
       ]
     },
     {
@@ -510,7 +514,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fwB72vWW-9Yn",
-        "outputId": "2c55e47b-8190-4e2e-cfb1-2a6fbce6ba41"
+        "outputId": "8b8f8071-7350-4fe7-a1f1-316bcd2baf49"
       },
       "source": [
         "#https://stackoverflow.com/questions/5900578/how-does-collections-defaultdict-work\n",
@@ -535,13 +539,13 @@
         "\n",
         "  best_label.sort(key=lambda x: x[1],reverse=True)\n",
         "\n",
-        "  print(best_label)\n",
+        "  #print(best_label)\n",
         "\n",
         "  return best_label[0]\n",
         "\n",
         "print(\"Funktion get_label_count wurde erstellt...\")\n"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,9 +566,7 @@
         "\n",
         "Der folgende Code kann als Lösung der Aufgabe betrachtet werden. Er übergibt eine zuvor normailisierte Instanz an get_k_nearest. Das Ergebnis wird mit get_label_count ausgewerten und aufgeräumt ausgegeben.\n",
         "\n",
-        "Die Zuordnung dreier bekannter Instanzen war erfolgreich. Das Auftauchen gleicher Werte im Array ist mit dem vorhandensein gleicher Basisdaten zu erklären.\n",
-        "\n",
-        "Natürlich währe die Lösung in einer IDE übersichtlicher und zudem das Problem mit wesendlich weniger Code lösbar. Aber ein Notebook ist ja auch ein Werkzeug, um sich Code und Daten flexible und dynamisch beschäftigen zu können."
+        "Die Zuordnung dreier bekannter Instanzen war erfolgreich. Das Auftauchen gleicher Werte im Array ist mit dem vorhandensein gleicher Basisdaten zu erklären."
       ]
     },
     {
@@ -574,7 +576,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3fafe5ba-d440-49b1-aef0-fb2197b87655"
+        "outputId": "d446136a-e85e-488e-8c33-74327a031a36"
       },
       "source": [
         "auftraege=normalizeSingleData(8)\n",
@@ -592,22 +594,21 @@
         "print(\"Gesamtbild: \")\n",
         "print(\"\")\n",
         "\n",
-        "print(\"Die 8 engsten Nachbarn sind: \")\n",
+        "print(\"Die 10 engsten Nachbarn sind: \")\n",
         "print(x)\n",
         "\n",
         "print(\"\")\n",
         "\n",
         "print(\"Die wahrscheinlichste Klasse ist: \" + str(y[0]) + \" mit \" + str(y[1]) + \" Mitgliedern\")"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[2.0, 8], [1.0, 3]]\n",
             "Gesamtbild: \n",
             "\n",
-            "Die 8 engsten Nachbarn sind: \n",
+            "Die 10 engsten Nachbarn sind: \n",
             "[[0.03296703296703296, 2.0], [0.03296703296703296, 2.0], [0.03296703296703296, 2.0], [0.03296703296703296, 2.0], [0.03296703296703296, 2.0], [0.0786693465015184, 1.0], [0.0786693465015184, 1.0], [0.0786693465015184, 1.0], [0.0838699863872184, 2.0], [0.0838699863872184, 2.0], [0.0838699863872184, 2.0]]\n",
             "\n",
             "Die wahrscheinlichste Klasse ist: 2.0 mit 8 Mitgliedern\n"
