--- a/KNN_sklearn.ipynb
+++ b/KNN_sklearn.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN sklearn",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMp2TV1gxGH+5mspaEdUtmk",
+      "authorship_tag": "ABX9TyO1v+pRrRh3gjfN/QK6vGay",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
       "source": [
         "#https://www.python-course.eu/k_nearest_neighbor_sklearn.php"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
         "\n",
         "print(\"Bibliotheken importiert....\")"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,9 @@
         "id": "MkR8djMMBob_"
       },
       "source": [
-        "Um den Code übersichtlicher zu halten, lagere ich die Funktionalität für die Normalisierung in eine eigene Funktion aus. Ich verwende hierbei den Algorithmus von sklearn mit der Normierungsmethode \"max\". Es scheint, dass dieser im einfachsten Fall einfach alles durch den maximalen Wert teilt. Hierdurch ist der größte Wert 1, der kleinste geht gegen 0."
+        "Um den Code übersichtlicher zu halten, lagere ich die Funktionalität für die Normalisierung in eine eigene Funktion aus. Zunächst habe ich hierbei den Algorithmus von sklearn mit der Normierungsmethode \"max\" verwendet.\n",
+        "\n",
+        "Eine bessere Wahl scheint hier der MinMaxScaler zu sein, der sich mehr entsprechend der im Modul gegebenen Formal verhält. Zudem ist es möglich, eine (mit den Labels initiierte) Instanz als globale Variable zu halten. Dies ist notwendig, um später die neuen Instanzen zu normalisieren."
       ]
     },
     {
@@ -135,7 +137,7 @@
         "\n",
         "print(\"Funktion normalizeDataSklearn wurde erstellt....\")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +156,7 @@
       "source": [
         "Als nächstes teile ich das dataset in Test- und Trainingsdaten. Dies habe ich in der vorhergehenden Übung (Regression) noch nicht gemacht. Es scheint mir aber mittlerweile auch bei den Übungen sinnvoll, da nebenbei auch das dataset durchgemischt wird. (Auch wenn es bei KNN nicht notwendig scheint, da gegen alle vorhandenen Elemente gerechnet wird)\n",
         "\n",
-        "Ich erstelle hierbei zwei Versionen. Eine ohne vorhergehende Normalisierung, eine mit. Bei KNN ist die Normalisierung vor allem bei großen Differenzen innerhalb der Zahlenbereich notwendig, um ein shadowing vorzubeugen.\n",
+        "Ich erstelle hierbei zwei Versionen. Eine ohne vorhergehende Normalisierung, eine mit. Bei KNN ist die Normalisierung vor allem bei großen Differenzen innerhalb der Zahlenbereichs notwendig, um ein shadowing vorzubeugen.\n",
         "\n",
         "Bei dem IRIS Datensatz halte ich dies aber für noch nicht notwendig."
       ]
@@ -200,7 +202,7 @@
         "\n",
         "print(\"Daten vorhanden und vorbereitet\")"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +244,7 @@
         "\n",
         "print(\"Klassifizierer ist vorbereitet and antrainiert\")"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +309,7 @@
         "print()\n",
         "print(\"Fertig...\")"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,7 +385,7 @@
         "print(pred)\n",
         "print(predNorm)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
